--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,35 @@
 # Site
-name: "Memoirs"
-title: "Memoirs"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+name: "The Secret Herb"
+title: "The Secret Herb"
+description: "Brew Your Secret Bliss with Nature’s Herbal Kiss 🌿✨"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /thesecretherb.github.io
 google_analytics: 'UA-xxxxxxxx-1'
-disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+# disqus: 'demowebsite'
+# mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
-email: wowthemesnet@gmail.com
+email: the108matrix@gmail.com
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    avatar: 'assets/images/avatar-sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/donate/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
+  # sal:
+  #   name: Chris
+  #   display_name: Chris Munch
+  #   avatar: 'assets/images/avatar.png'
+  #   # email: wowthemesnet@gmail.com
+  #   # web: https://www.wowthemes.net/donate/
+  #   # twitter: https://twitter.com/wowthemesnet
+  #   description: Chris Munch, a biology graduate, has a keen interest in health supplements, fueled by an expansive study in the field. Drawing inspiration from acclaimed figures like Andrew W. Saul PH.D and Dr. Tom O. Bryan, Chris combines a rigorous scientific approach with a discerning eye for marketing and statistical misrepresentation. His self-experimentation ethos, inspired by Tim Ferriss and Bryan Johnson, allows for a deeper understanding of how various health strategies affect the body. Yet, despite his extensive knowledge, Chris prefers to be seen as a researcher, constantly learning and expanding his understanding of health supplements and menopausal weight loss.
+  aaina:
+    name: Aaina
+    display_name: Aaina
     avatar: 'assets/images/avatar.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
+    # email: the108matrix@gmail.com
+    # web: 
+    # twitter: 
+    description: Aaina, a statistics graduate with a passion for natural remedies, blends analytical rigor with non-invasive alternative healing. Inspired by wellness experts, she explores ancient remedies to enhance health and vitality, always striving to deepen her knowledge and support your wellness journey.
 
 # Plugins
 plugins:
@@ -62,12 +62,12 @@ kramdown:
 
 
 # Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
-adsense: "disabled"
-adsense-data-ad-client: "ca-pub-3412143450191416"
-adsense-data-ad-slot: "1363087678"
+# adsense: "disabled"
+# adsense-data-ad-client: "ca-pub-3412143450191416"
+# adsense-data-ad-slot: "1363087678"
 
 # Lazy Images ("enabled" or "disabled")
-lazyimages: "disabled"
+lazyimages: "enabled"
 
 # Post Author Box ("enabled" or "disabled")
 authorbox: "enabled"
