--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "The Secret Herb"
 description: "Brew Your Secret Bliss with Nature’s Herbal Kiss 🌿✨"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /thesecretherb.github.io
+baseurl: /thesecretherb.com
 google_analytics: 'UA-xxxxxxxx-1'
 # disqus: 'demowebsite'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
