--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ title: "The Secret Herb"
 description: "Brew Your Secret Bliss with Nature’s Herbal Kiss 🌿✨"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: thesecretherb.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://thesecretherb.com" # the base hostname & protocol for your site, e.g. http://example.com
 google_analytics: 'UA-xxxxxxxx-1'
 # disqus: 'demowebsite'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
