--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://thesecretherb.com" # the base hostname & protocol for your site, e
 # disqus: 'demowebsite'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
-permalink: /
+permalink: /:title/
 email: the108matrix@gmail.com
 
 # Authors
